openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: network-api

  template:
    metadata:
      labels:
        app: network-api

    spec:
      containers:
        - name: network-api
          image: rajrpandya/network-api:1.4

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
